# asemic

./: .env  .env.electron  .gitignore  .npmignore  11-15 wave collapse.json  AuthKey_86V4LPR84R.p8  EXPRESSION_EDITOR_USAGE.md  JSON_FILE_LOADING.md  LICENSE.txt  README.md  SAMPLE_SCENES.json  WEBRTC_COMPLETE.md  WEBRTC_HANDSHAKE.md  WEBRTC_IMPLEMENTATION.md  WEBRTC_QUICK_REFERENCE.md  asemic-example.asemic  esbuild.config.mjs  expr-syntax.md  index.html  index.ts  jest.config.js  package-lock.json  package.json  playwright.config (1).ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.lib.ts  vite.config.ts  vite.config.ts.timestamp-1756525127511-bd10f90e47756.mjs  vite.config.ts.timestamp-1763877536057-70373ad601336.mjs  vite.config.ts.timestamp-1769100464783-6f10e560f393d.mjs  vscode-profile-2025-06-18-05-45-56.cpuprofile  vscode-profile-2025-06-18-06-52-24.cpuprofile  vscode-profile-2025-06-18-06-57-49.cpuprofile  vscode-profile-2025-06-18-06-58-38.cpuprofile  vscode-profile-2025-06-18-07-06-00.cpuprofile
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cargo-flamegraph.trace/Trace1.run/: RunIssues.storedata
src-tauri/src/: lib.rs  main.rs  parser_state.rs
src-tauri/src/parser/: mod.rs  types.rs
src-tauri/src/parser/core/: asemic_group.rs  output.rs  utilities.rs
src-tauri/src/parser/fonts/: defaultFont.asemic  fonts.rs
src-tauri/src/parser/methods/: asemic_pt.rs  data.rs  drawing.rs  expressions.rs  (+8 more)
src-tauri/src/supercollider/: mod.rs
(+359 files in other folders)
